added a file upload view and a login view

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,7 @@
   </header>
 
   <div id="main" role="main">
-    {% block main %}{% endblock %}
+    <div class="container">{% block main %}{% endblock %}</div>
   </div>
 
   <footer>
